tests/invalid/expected_type.out
tests/invalid/expected_type.ri:3:11: error: expected type, found procedure
    3 | proc x(a: my_proc) {}
      |           ^~~~~
rivet: error: could not compile module `expected_type`, aborting due to previous error